# ruleweaver

./: AGENTS.md  IDEA.md  README.md  pyproject.toml
src/ruleweaver/: __init__.py  cli.py  watcher.py  weaver_engine.py
tests/: test_watcher.py  test_weaver_engine.py
