pyproject.toml
[tool.poetry]
name = "ruleweaver"
version = "0.1.0"
description = "Dynamic, context-aware .cursorrules generation deployed on the fly"
authors = ["avasis-ai <contact@avasis.ai>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
tree-sitter = "^0.20"
watchdog = "^3.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
rulweaver = "ruleweaver.cli:main"

[build-system]
requires = ["poetry-core"]
builder = "poetry.core.buildapi"
